--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uifx": "^2.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
